--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,10 @@
-name: Production Build
-
 on:
   release:
     types: [created]
 
 permissions:
-  contents: write
-  packages: write
+    contents: write
+    packages: write
 
 jobs:
   releases-matrix:
@@ -14,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # build and publish in parallel: linux/386, linux/amd64, linux/arm64, windows/386, windows/amd64, darwin/amd64, darwin/arm64
         goos: [linux, windows, darwin]
         goarch: ["386", amd64, arm64]
         exclude:
@@ -21,26 +20,11 @@ jobs:
             goos: darwin
           - goarch: arm64
             goos: windows
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - uses: actions/checkout@v3
+    - uses: wangyoucao577/go-release-action@v1
       with:
-        go-version: 1.20.5
-
-    - name: Install dependencies
-      run: go mod tidy
-
-    - name: Build the Go application
-      run: |
-        VERSION=$(echo ${{ github.event.release.tag_name }})
-        go build -o airbox-agent-$VERSION
-
-    - name: Archive build output
-      uses: actions/upload-artifact@v3
-      with:
-        name: airbox-agent-${{ github.event.release.tag_name }}
-        path: ./airbox-agent-${{ github.event.release.tag_name }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        goos: ${{ matrix.goos }}
+        goarch: ${{ matrix.goarch }}
+        goversion: "https://dl.google.com/go/go1.20.5.linux-amd64.tar.gz"
